Skip to content

GitLab

  • Menu
Projects Groups Snippets
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • intel intel
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Issues 836
    • Issues 836
    • List
    • Boards
    • Service Desk
    • Milestones
  • Analytics
    • Analytics
    • Value stream
  • Wiki
    • Wiki
  • Activity
  • Create a new issue
  • Issue Boards
Collapse sidebar
  • drm
  • intelintel
  • Issues
  • #913

Closed
Open
Created Dec 30, 2019 by Kai Vehmanen@kaivehmanenintel

Display flickering during boot & during sound card binding

Reported on intel-gfx list:

From: Blaž Hrastnik <blaz ... mxxn.io>
Subject: [bug] i915 flickering display after some of the 5.5rc3 patches

Hi! I'm using a Surface Laptop 3 (Intel version, i7-1065G7) which is running the i915 driver. I have a screen flicker issue in 5.5rc that I wasn't able to track down initially
because of the sheer volume of commits to bisect. Luckily, I can reproduce the same issue on 5.4.6 now as well after the latest round of Arch Linux specific patches (upgrading
arch1 -> arch3 will produce the bug).

https://git.archlinux.org/linux.git/log/?h=v5.4.6-arch3

  • During boot, the screen will flash to black for a second, then back on, two or three times.
  • After that, when starting a wayland session the same thing happens (also twice).
  • If I plug in a power cable, the same thing happens (again twice). It doesn't happen on unplug though.

After the initial flicker, it's completely fine unless I plug a power cable in.

I managed to bisect the issue down to 2-3 patches Kai Vehmanen made regarding intel_audio:

It works on commit "x86/intel: Disable HPET on Intel Ice Lake platforms". But it doesn't work on "drm/i915: extend audio CDCLK>=2*BCLK constraint to more platforms"

So one of these three patches cause it:

  • https://patchwork.freedesktop.org/patch/331957/
  • https://patchwork.freedesktop.org/patch/334110/
  • https://patchwork.freedesktop.org/patch/334111/

(I think it's not 334110, because I initially tested a build with just that commit reverted).

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking